Frontend arreglado e implementacion de filtros y busqueda